# hal-simplicity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
contrib/: extra_tests.sh
hal-simplicity-client/: Cargo.toml  README.md
hal-simplicity-client/src/: hal_simplicity_client.rs  lib.rs  main.rs
hal-simplicity-client/src/cmd/: address.rs  block.rs  keypair.rs  mod.rs  tx.rs
hal-simplicity-client/src/cmd/simplicity/: info.rs  mod.rs  sighash.rs
hal-simplicity-client/src/cmd/simplicity/pset/: create.rs  extract.rs  finalize.rs  mod.rs  run.rs  update_input.rs
hal-simplicity-client/tests/: cli.rs
hal-simplicity-daemon/: Cargo.toml  README.md
hal-simplicity-daemon/src/: lib.rs  main.rs  types.rs
hal-simplicity-daemon/src/daemon/: handler.rs  mod.rs
hal-simplicity-daemon/src/daemon/actions/: address.rs  block.rs  keypair.rs  mod.rs  tx.rs
hal-simplicity-daemon/src/daemon/actions/simplicity/: info.rs  mod.rs  sighash.rs
hal-simplicity-daemon/src/daemon/actions/simplicity/pset/: create.rs  extract.rs  finalize.rs  mod.rs  run.rs  update_input.rs
hal-simplicity-daemon/src/utils/: address.rs  block.rs  confidential.rs  hal_simplicity.rs  mod.rs  serde_helpers.rs  tx.rs
src/: address.rs  block.rs  confidential.rs  hal_simplicity.rs  lib.rs  tx.rs  utils.rs
src/actions/: address.rs  block.rs  keypair.rs  tx.rs
src/actions/simplicity/: info.rs  mod.rs  sighash.rs
src/actions/simplicity/pset/: create.rs  extract.rs  finalize.rs  mod.rs  run.rs  update_input.rs
src/daemon/: handler.rs  mod.rs
src/daemon/actions/: address.rs  block.rs  keypair.rs  mod.rs  tx.rs  types.rs
src/daemon/actions/simplicity/: info.rs  sighash.rs
src/daemon/actions/simplicity/pset/: create.rs  extract.rs  finalize.rs  mod.rs  run.rs  update_input.rs
src/jsonrpc/: mod.rs
tests/: cli.rs
