[package]
name = "hal-simplicity-client"
version = "0.1.0"
edition = "2021"
authors = ["Steven Roose <steven@stevenroose.org>", "Andrew Poelstra <apoelstra@blockstream.com>"]
license = "CC0-1.0"
homepage = "https://github.com/BlockstreamResearch/hal-simplicity/"
repository = "https://github.com/BlockstreamResearch/hal-simplicity/"
description = "hal-simplicity: a Simplicity extension of hal"
keywords = [ "crypto", "bitcoin", "elements", "liquid", "simplicity" ]
readme = "README.md"

[lib]
name = "hal_simplicity"
path = "src/lib.rs"

[features]
default = ["embed_daemon"]
embed_daemon = ["hal-simplicity-daemon/daemon"]

[dependencies]
hal-simplicity-daemon = { path = "../hal-simplicity-daemon", default-features = false }

clap = "2.32"
log = "0.4.5"
fern = "0.5.6"

serde = { version = "1.0.84", features = [ "derive" ] }
serde_json = "1.0.34"
serde_yaml = "0.8.8"
hex = "0.3.2"

thiserror = "2.0.17"
reqwest = { version = "0.12.26", features = ["blocking"] }

[lints.clippy]
# Exclude lints we don't think are valuable.
needless_question_mark = "allow" # https://github.com/rust-bitcoin/rust-bitcoin/pull/2134
manual_range_contains = "allow" # More readable than clippy's format.
uninlined_format_args = "allow" # Stylistic and dumb and inconsistent
