[package]
name = "hal-simplicity-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Steven Roose <steven@stevenroose.org>", "Andrew Poelstra <apoelstra@blockstream.com>"]
license = "CC0-1.0"
homepage = "https://github.com/BlockstreamResearch/hal-simplicity/"
repository = "https://github.com/BlockstreamResearch/hal-simplicity/"
description = "hal-simplicity: a Simplicity extension of hal"
keywords = [ "crypto", "bitcoin", "elements", "liquid", "simplicity" ]
readme = "README.md"

[lib]
name = "hal_simplicity_daemon"
path = "src/lib.rs"

[dependencies]
hal = "0.10.0"
clap = "2.32"
log = "0.4.5"
fern = "0.5.6"
chrono = "0.4"

serde = { version = "1.0.84", features = [ "derive" ] }
serde_json = "1.0.34"
serde_yaml = "0.8.8"
hex = "0.3.2"

elements = { version = "0.25.2", features = [ "serde", "base64" ] }
simplicity = { package = "simplicity-lang", version = "0.5.0", features = [ "base64", "serde" ] }
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"

[lints.clippy]
# Exclude lints we don't think are valuable.
needless_question_mark = "allow" # https://github.com/rust-bitcoin/rust-bitcoin/pull/2134
manual_range_contains = "allow" # More readable than clippy's format.
uninlined_format_args = "allow" # Stylistic and dumb and inconsistent
