[package]
name = "hal-simplicity-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Steven Roose <steven@stevenroose.org>", "Andrew Poelstra <apoelstra@blockstream.com>"]
license = "CC0-1.0"
homepage = "https://github.com/BlockstreamResearch/hal-simplicity/"
repository = "https://github.com/BlockstreamResearch/hal-simplicity/"
description = "hal-simplicity-daemon: a Simplicity extension daemon for hal"
keywords = [ "crypto", "bitcoin", "elements", "liquid", "simplicity" ]
readme = "README.md"

[lib]
name = "hal_simplicity_daemon"
path = "src/lib.rs"

[[bin]]
name = "hal-simplicity-daemon"
path = "src/main.rs"
required-features = ["daemon"]

[features]
default = ["daemon"]
daemon = [
	"dep:clap",
	"dep:log",
	"dep:fern",
	"dep:chrono",
	"dep:serde_yaml",
	"dep:hex",
	"dep:hyper",
	"dep:hyper-util",
	"dep:http-body-util",
	"dep:tokio",
	"dep:thiserror",
]

[dependencies]
# Core dependencies (always available)
serde = { version = "1.0.84", features = [ "derive" ] }
serde_json = "1.0.34"
elements = { version = "0.25.2", features = [ "serde", "base64" ] }
simplicity = { package = "simplicity-lang", version = "0.5.0", features = [ "base64", "serde" ] }
hal = "0.10.0"

# Daemon-only dependencies
clap = { version = "2.32", optional = true }
log = { version = "0.4.5", optional = true }
fern = { version = "0.5.6", optional = true }
chrono = { version = "0.4", optional = true }
serde_yaml = { version = "0.8.8", optional = true }
hex = { version = "0.3.2", optional = true }
hyper = { version = "1.8.1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
thiserror = { version = "2.0.17", optional = true }

[lints.clippy]
# Exclude lints we don't think are valuable.
needless_question_mark = "allow" # https://github.com/rust-bitcoin/rust-bitcoin/pull/2134
manual_range_contains = "allow" # More readable than clippy's format.
uninlined_format_args = "allow" # Stylistic and dumb and inconsistent
